Add: ExportFunc to ShotenshaWorshipSurvivorPage

--- a/remics-test1/force-app/main/default/pages/shotenshaWorshipSurvivorList.page
+++ b/remics-test1/force-app/main/default/pages/shotenshaWorshipSurvivorList.page
@@ -1,4 +1,4 @@
-<apex:page controller="ShotenshaWorshipController" action="{!createCsvData}" sidebar="false" showHeader="false" contentType="text/csv;charset=Shift-JIS#ShotenshaList_{!YEAR(TODAY())}{!MONTH(TODAY())}{!DAY(TODAY())}.csv"
+<apex:page controller="ShotenshaWorshipController" action="{!createAtenaCsvData}" sidebar="false" showHeader="false" contentType="text/csv;charset=Shift-JIS#Izoku_Annai_{!YEAR(TODAY())}{!LPAD(TEXT(MONTH(TODAY())), 2 , '0')}{!DAY(TODAY())}.csv"
     readOnly="true" title="遺族宛案内者抽出CSV出力">
 
     <apex:outputText value="{!csvData}" />
